# cwenum

./: .gitignore  Cargo.toml  README.md  cooldown.toml  deny.toml
.github/workflows/: check_for_updates.yml  tests.yml
scripts/: generate_code.py  generate_code.sh  publish.sh  test.sh  test_readme.sh
src/: cwe.rs  lib.rs
